examples/test/testpolicy8054.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8054
  namespace: namespace89
spec:
  podSelector:
    matchLabels:
      key1: value7
      key9: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value35
          key6: value5
          key34: value13
      podSelector:
        matchLabels:
          key18: value4
